apps/family/immich/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: family-immich-production
