apps/family/immich/production/service-immich.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  ports:
  - name: http
    port: 2283
    targetPort: http
  selector:
    app.kubernetes.io/name: immich
