apps/family/immich/production/httproute-immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames:
  - photos.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: immich
      port: 2283
    matches:
    - path:
        type: PathPrefix
        value: /
